# Replay-AI_Memory_Layer_for_Humanity

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: mvp-scope.md  pitch-deck-4slide.html  pitch-deck.md  product-journey.md
landing/: index.html
replay/: __init__.py  cli.py  config.py
replay/capture/: atuin.py  bash.py
replay/display/: plain.py  tui.py
replay/processing/: chunker.py  cluster.py  fix_detector.py  secret_filter.py
replay/search/: chat.py  embedder.py  index.py  query.py
scripts/: seed_demo.py  seed_index.py
tests/: conftest.py  test_atuin_reader.py  test_chat.py  test_chunker.py  test_cli.py  test_cluster.py  test_embedder.py  test_fix_detector.py  test_index.py  test_polish.py  test_query.py  test_secret_filter.py
website/: index.html
